	PR fortran/30655

* expr.c (check_dimension): Fix logic of comparisons.

	* gfortran.dg/bounds_check_6.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123187 138bc75d-0d04-0410-961f-82ee72b054a4